# cubescript2

./: .gitignore  Cargo.toml  README  README.md
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/resource/: Cargo.toml
crates/resource/src/: lib.rs  tools.rs
doc/: 世界观与历史.md  规划.md
doc/utility/: calc.py
doc/重构/: 重构渲染2022_12_09.md
shader/: cube_shader.wgsl
src/: bignum.rs  lib.rs  main.rs  scene.rs  utils.rs  window.rs
src/logic/: mod.rs  orient.rs
src/render/: camera.rs  label.rs  mesh.rs  mod.rs  pipeline.rs  scene.rs  texture.rs
src/render/built_in/: cube.rs
src/render/texture/: format_info.rs  mod.rs
src/scene/: mod.rs
src/window/: input.rs  mod.rs
