[package]
name = "cubescript2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
winit = "*"
wgpu = "*"
image = "*"

anyhow = "*"
bitmaps = "*"
bytemuck = "*"
uint = "*"
pollster = "*"
memoffset = "*"
once_cell = "*"
env_logger = "*"
log = "*"

cubescript2_macros = { path = "crates/macros" }
