[package]
name = "cubescript2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resource ={ path ="crates/resource" }

nalgebra = "*"
winit = "*"
wgpu = "*"
image = "*"
gilrs = "*" # 手柄支持, bevy 就用的这个

anyhow = "*"
bitmaps = "*"
bytemuck = { version = "*", features = ["derive"] }
uint = "*"
pollster = "*"
memoffset = "*"
once_cell = "*"
env_logger = "*"
log = "*"